<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailedTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/day"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/detailedDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailedTimeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detailedTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailedDateTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/weather_condition"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detailedTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailedTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/temperature_range"
        android:textSize="18sp" />

</RelativeLayout>
