<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rec_background"
    app:cardCornerRadius="20dp"
    app:cardElevation="2dp">
    <TextView
        android:id="@+id/dayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:text="@string/day"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/dayTextView"
        android:text="@string/date"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/roundrec_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/mooncloud_fast_wind"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/weatherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weather_condition"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/uvTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uv"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
